feat(plugin): configure Stage 0 plugin subprocess JVM args (#223)
* feat(plugin): configure Stage 0 plugin subprocess JVM args

Add a generic, opt-in JVM-args surface for the Stage 0 build-tool
subprocess via --plugin-jvm-args / pluginJvmArgs / Builder.pluginJvmArgs.
Gradle receives -Dorg.gradle.jvmargs on the command line (highest
precedence, replaces the project's value; GRADLE_OPTS is unused since
--no-daemon runs the build in a JVM governed by org.gradle.jvmargs).
Maven receives an appended MAVEN_OPTS (default-only — a project
.mvn/jvm.config wins, by design). runProcess gains an env param to
inject MAVEN_OPTS into the subprocess environment.

Document the two-JVM memory model (runner vs Stage 0 subprocess), the
per-tool precedence caveats, and the -Xms-aware combined-budget /
container cgroup model. Record the fork-per-run LST worker JVM as a
deferred ADR (0009).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

* docs(plugin): correct Maven .mvn/jvm.config precedence for pluginJvmArgs

The earlier docs claimed a project .mvn/jvm.config wins over our injected
MAVEN_OPTS. The standard Maven 3.x launcher actually places jvm.config
BEFORE MAVEN_OPTS on the java command line (bin/mvn prepends it; bin/mvn.cmd
passes %JVM_CONFIG_MAVEN_PROPS% before %MAVEN_OPTS%), so for last-wins
flags like -Xmx our appended args win. The behavior is unchanged and
correct (symmetric with Gradle, opt-in, and surgical — only conflicting
flags are overridden while the project's other jvm.config entries still
apply); only the documentation/comments were inverted.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>

---------

Co-authored-by: Claude Opus 4.8 <noreply@anthropic.com>